# rust-api-demo

./: .gitignore  Cargo.toml  README.md
migrations/2020-02-18-182606_initialize/: up.sql
src/: json_responses.rs  lib.rs  main.rs  models.rs  schema.rs
