[package]
name = "rust_api_demo"
version = "0.1.0"
authors = ["gfux"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]